Closed Bug 34780 Opened 25 years ago Closed 25 years ago

Clicking on Add to Addressbook in vCard crashes Mozilla

Categories

(SeaMonkey :: MailNews: Message Display, defect, P1)

x86
Windows 2000
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: bugzilla, Assigned: rhp)

Details

(Keywords: crash)

The subject says it all. 2000040520
Severity: normal → critical
Keywords: crash
QA Contact: lchiang → esther
Scott, assuming M15 stopper. Can you determine and adjust? Thanks!
Target Milestone: --- → M15
Esther - can you try this?
Not sure how I missed reassigning this, sorry for stealing time from you Scott :-(
Assignee: selmer → mscott
vcard = rhp.
Assignee: mscott → rhp
On a side note, I highly doubt this is a M15 criticial stopper bug.
It appears to be crashing in some Addressbook url code trying to unescape a null string.
not M15 stopper. The feature is not complete and is not advertised to be so.
Target Milestone: M15 → M16
Status: NEW → ASSIGNED
Priority: P3 → P1
I think I have this fixed. - rhp
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
What was the fix? Currently it's disabled on win and linux(builds 2000-04-26-11 M16), and crashes on Mac just opening the mail message w/vcard. I'll log a separate bug for the crash on mac, but I need to know what the fix is to verify it.
Note: On mac using an earlier build 2000-04-21 the button is on the message next to the vCard but it's labeled with ??? and it's clickable but does nothing. Just to clearify since there are no steps, were talking about the Button that displays to the right of a vCard in a message with a vCard. Is this correct?
the fix is that it shouldn't crash anymore, but I changed the output so it is disabled so you can't really push the button. - rhp
Using 2000-05-09 on win98, mac and linux the "Add to address book" button is now disabled on all platforms so it doesn't crash. This bug is verified.
Status: RESOLVED → VERIFIED
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.