Fix for crash on vCard Add button - Bug #34780